# flac-rs

./: .gitignore  Cargo.toml  Readme.md  test.flac
src/: flac.rs  lib.rs
