[package]
name = "flac-rs"
version = "0.0.1"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
description = "A rust wrap for libflac-sys"
repository = "https://github.com/0xAA55-rs/flac-rs"
keywords = ["audio", "FLAC", "lossless"]

[dependencies]
libflac-sys = { version = "*", default-features = false, features = ["build-flac"] }
id3 = { version = "^1.0.0", optional = true }

[features]
default = ["id3"]
id3 = ["dep:id3"]

[profile.release]
lto = "fat"

[lib]
name = "flac_rs"
path = "src/lib.rs"
