[package]
name = "flac-rs"
version = "0.0.7"
edition = "2024"
authors = ["0xAA55 <838816058@qq.com>"]
license-file = "LICENSE"
description = "A rust wrap for libflac-sys for both encoding and decoding and metadata"
repository = "https://github.com/0xAA55-rs/flac-rs"
keywords = ["audio", "FLAC", "lossless"]

[dependencies]
libflac-sys = { version = "^0", default-features = false, features = ["build-flac"] }
id3 = { version = "^1", optional = true }

[features]
default = ["id3"]
id3 = ["dep:id3"]

[lib]
name = "flac"
path = "src/lib.rs"
